--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>M4 Challenge</title>
 </head>
 
-<body>
+<body style="font-family:'Helvetica Neue', sans-serif;">
   <h1 style="text-align:center;">Open the Console to See the Magic ✨! </h1>
   <script src="index.js"></script>
 </body>
